hide side bar if user not authorized in mobile mode fixed color of select in dark mode

--- a/frontend/src/components/layout/Navbar.css
+++ b/frontend/src/components/layout/Navbar.css
@@ -343,9 +343,9 @@
     color: var(--gray-700);
   }
   .dark-mode .navbar-menu-mobile .dropdown-menu {
-    background: var(--gray-900) !important;
+    background: var(--gray-100) !important;
     color: white !important;
-    border-color: var(--gray-700) !important;
+    border-color: var(--gray-300) !important;
   }
   
   .dark-mode .navbar-menu-mobile .dropdown-item {
